- allow access of transformed constraints in SCIP_STAGE_TRANSFORMED

performance improvements:
- SCIP with SoPlex as LP solver now uses auto pricing by default (start with devex, switch to steepest edge after some iterations);
  this fixes timeouts on instances where devex converges very slowly

fixed bugs:
- fixed bug in heur_subnlp when initialized starting values of a fixed variable in the NLP of the subscip
- fixed bug in SCIPcopyConss (valid was not initialized to TRUE)
- fixed bug in reader_mps: indicator constraints do not output the slack variables anymore
- fixed bug in heur_undercover: removed option globalbounds, since we are not allowed to relax bounds at a probing node
- fixed bug in SCIPcopyConss: copy all active constraints (including disabled ones)
- corrected behavior of the copy function in cons_indicator.c: create artificial linear constraint if linear constraint was deleted
- fixed bug in cons_indicator.c: presolving cannot delete linear constraints; several other minor bugfixes
- fixed bug w.r.t. looseobjval; the coounting of number of loose variables in the LP data structure was incorrect in case a 
  variable got aggregated or multi-aggregated 
- fixed bug in debug.c w.r.t. checking of constraints and continuous variables
- fixed bug w.r.t. memory allocation for all values of a column in lpi_cpx.c
- fixed bug in copy method of objvardata which should only create a new SCIP_VARDATA if the implemented subclass create a copy of the given objvardata object
- fixed bug in propagation of indicator constraints: cannot fix slack variable to 0 if linear constraint is disabled/not active
- fixed bug in heur_shiftandpropagate where some variables were initialized too late

parameters:
- added parameter <constraints/quadratic/disaggregate> to split a block-separable quadratic constraint into several quadratic constraint
- added possible value 'e' for <constraints/soc/nlpform> to enable convex exponential-sqrt form for SOC constraint representation in NLP